markup and styles item-search

--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -4,3 +4,11 @@
 // helpers
 .content-box
 		padding: 0 1em
+// item of search
+.item-search
+	overflow: hidden
+	margin: 0.5em 0
+	padding: 10px 20px
+	background: $cell-background
+	border: 1px solid $border
+	border-radius: 8px
