--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -4,11 +4,28 @@
 // helpers
 .content-box
 		padding: 0 1em
-// item of search
-.item-search
-	overflow: hidden
-	margin: 0.5em 0
-	padding: 10px 20px
+.txt-center
+	text-align: center
+
+/* custom styles */
+.container
+	max-width: 1000px
+	margin: 0 auto
+	
+.filters
+	select
+		width: 100%
+
+.results
+	min-height: 400px 
 	background: $cell-background
-	border: 1px solid $border
-	border-radius: 8px
+	padding-bottom: 1em
+	h2
+	// item of search
+	.item-search
+		overflow: hidden
+		margin: 0.5em 0
+		padding: 10px 20px
+		background: #fff
+		border: 1px solid $border
+		border-radius: 8px
