adjustment in filters, print single country

--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -11,11 +11,18 @@
 .container
 	max-width: 1000px
 	margin: 0 auto
-	
+
+// filters container
 .filters
+	padding-bottom: 15px
 	select
 		width: 100%
-
+	.singlecountry
+		padding: 9px 15px
+		border: 1px solid #ccc
+		border-radius: $border-radius
+		
+// results container 
 .results
 	min-height: 400px 
 	background: $cell-background
