--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -30,7 +30,7 @@
 	// results message
 	.itemcountry:not(:last-of-type)
 		&::after
-			content: ', '
+			content: ' y '
 	// item of search
 	.item-search
 		overflow: hidden
