--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -21,6 +21,7 @@
 		padding: 9px 15px
 		border: 1px solid #ccc
 		border-radius: $border-radius
+		color: #888
 		
 // results container 
 .results
