adjustments styles and UX

--- a/app/css/styles.sass
+++ b/app/css/styles.sass
@@ -36,7 +36,11 @@
 	.item-search
 		overflow: hidden
 		margin: 0.5em 0
-		padding: 10px 20px
+		padding: 10px 16px
 		background: #fff
 		border: 1px solid $border
 		border-radius: 8px
+		.universitylogo
+			border-radius: 6px
+			float: left
+			margin-right: 16px
